[tool.poetry]
name = "the-pyxie"
version = "0.1.0"
description = "Pyxie might help you with html"
authors = ["Daniel Konopka <github@konopka.me>"]
license = "MIT"
readme = "README.md"
packages = [{include = "the_pyxie"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
